src/.vuepress/styles/index.styl
@tailwind base;
@tailwind components;
@tailwind utilities;

.theme-default-content:not(.custom) {
  max-width: 48rem;
}


blockquote, ol, p, ul {
  margin: 1rem 0;
  line-height: 1.7;
}

ol, ul {
  list-style: auto;
  padding: 1rem;
}

a {
  color: #4979ff;
}

h1 {
  @apply text-4xl font-semibold;
}

h2 {
  @apply text-2xl font-semibold;
}

h3 {
  @apply text-xl font-semibold;
}

